// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HL7v2 Message should handle repeated segments 1`] = `
{
  "MSH": {
    "MSH.1": "|",
    "MSH.10": "MO999938854000000232",
    "MSH.11": "T",
    "MSH.12": "2.5.1",
    "MSH.13": "",
    "MSH.14": "",
    "MSH.15": "ER",
    "MSH.16": "AL",
    "MSH.17": "",
    "MSH.18": "",
    "MSH.19": "",
    "MSH.2": "^~\\&",
    "MSH.20": "",
    "MSH.21": {
      "1": "Z22",
      "2": "CDCPHINVS",
    },
    "MSH.3": "TestApplication",
    "MSH.4": "MO9999",
    "MSH.5": "WebIZ",
    "MSH.6": "MODHSS",
    "MSH.7": "20190520152420.922-0600",
    "MSH.8": "",
    "MSH.9": {
      "1": "VXU",
      "2": "V04",
      "3": "VXU_V04",
    },
  },
  "ORDER": {
    "OBSERVATION": [
      {
        "OBX": {
          "OBX.1": "1",
          "OBX.10": "",
          "OBX.11": "F",
          "OBX.12": "",
          "OBX.13": "",
          "OBX.14": "19990101",
          "OBX.15": "",
          "OBX.16": "",
          "OBX.17": {
            "1": "VXC40",
            "2": "vaccine level",
            "3": "CDCPHINVS",
          },
          "OBX.2": "CE",
          "OBX.3": {
            "1": "64994-7",
            "2": "Eligibility Status",
            "3": "LN",
          },
          "OBX.4": "1",
          "OBX.5": {
            "1": "V02",
            "2": "Medicaid",
            "3": "HL70064",
          },
          "OBX.6": "",
          "OBX.7": "",
          "OBX.8": "",
          "OBX.9": "",
        },
      },
      {
        "OBX": {
          "OBX.1": "2",
          "OBX.10": "",
          "OBX.11": "F",
          "OBX.12": "",
          "OBX.13": "",
          "OBX.14": "19990101",
          "OBX.2": "CE",
          "OBX.3": {
            "1": "30963-3",
            "2": "Vaccine funding source",
            "3": "LN",
          },
          "OBX.4": "2",
          "OBX.5": {
            "1": "VXC51",
            "2": "Public VFC",
            "3": "NIP008",
          },
          "OBX.6": "",
          "OBX.7": "",
          "OBX.8": "",
          "OBX.9": "",
        },
      },
      {
        "OBX": {
          "OBX.1": "3",
          "OBX.10": "",
          "OBX.11": "F",
          "OBX.12": "",
          "OBX.13": "",
          "OBX.14": "19990101",
          "OBX.2": "CE",
          "OBX.3": {
            "1": "30956-7",
            "2": "vaccine type",
            "3": "LN",
          },
          "OBX.4": "3",
          "OBX.5": {
            "1": "45",
            "2": "Hep B, UF",
            "3": "CVX",
          },
          "OBX.6": "",
          "OBX.7": "",
          "OBX.8": "",
          "OBX.9": "",
        },
      },
      {
        "OBX": {
          "OBX.1": "4",
          "OBX.10": "",
          "OBX.11": "F",
          "OBX.12": "",
          "OBX.13": "",
          "OBX.14": "19990101",
          "OBX.2": "TS",
          "OBX.3": {
            "1": "29768-9",
            "2": "VIS Publication Date",
            "3": "LN",
          },
          "OBX.4": "3",
          "OBX.5": "19970101",
          "OBX.6": "",
          "OBX.7": "",
          "OBX.8": "",
          "OBX.9": "",
        },
      },
      {
        "OBX": {
          "OBX.1": "5",
          "OBX.10": "",
          "OBX.11": "F",
          "OBX.12": "",
          "OBX.13": "",
          "OBX.14": "19990101",
          "OBX.2": "TS",
          "OBX.3": {
            "1": "29769-7",
            "2": "VIS Presentation Date",
            "3": "LN",
          },
          "OBX.4": "3",
          "OBX.5": "19990101",
          "OBX.6": "",
          "OBX.7": "",
          "OBX.8": "",
          "OBX.9": "",
        },
      },
    ],
    "ORC": {
      "ORC.1": "RE",
      "ORC.2": "",
      "ORC.3": {
        "1": "9999",
        "2": "MODHSS",
      },
    },
    "RXA": {
      "RXA.1": "0",
      "RXA.10": {
        "1": "",
        "10": "",
        "11": "",
        "12": "",
        "13": "",
        "14": "",
        "15": "",
        "16": "",
        "17": "",
        "18": "",
        "19": "",
        "2": "Sticker",
        "20": "",
        "21": "RN",
        "3": "Nurse",
        "4": "",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      "RXA.11": {
        "1": "",
        "2": "",
        "3": "",
        "4": "MO9999",
      },
      "RXA.12": "",
      "RXA.13": "",
      "RXA.14": "",
      "RXA.15": "lotnum",
      "RXA.16": "20000101",
      "RXA.17": {
        "1": "SKB",
        "2": "GlaxoSmithKline",
        "3": "MVX",
      },
      "RXA.18": "",
      "RXA.19": "",
      "RXA.2": "1",
      "RXA.20": "CP",
      "RXA.21": "A",
      "RXA.3": "19990101",
      "RXA.4": "",
      "RXA.5": {
        "1": "08",
        "2": "Hep B, ped/adol",
        "3": "CVX",
      },
      "RXA.6": "0.5",
      "RXA.7": {
        "1": "mL",
        "2": "",
        "3": "UCUM",
      },
      "RXA.8": "",
      "RXA.9": {
        "1": "00",
        "2": "New admin",
        "3": "NIP001",
      },
    },
    "RXR": {
      "RXR.1": {
        "1": "C28161",
        "2": "Intramuscular",
        "3": "NCIT",
        "4": "IM",
        "5": "Intramuscular",
        "6": "HL70162",
      },
      "RXR.2": {
        "1": "RT",
        "2": "Right Thigh",
        "3": "HL70163",
      },
    },
  },
  "PID": {
    "PID.1": "1",
    "PID.2": "",
    "PID.3": [
      {
        "1": "000000002",
        "2": "",
        "3": "",
        "4": "MO9999",
        "5": "MR",
      },
      {
        "1": "111111111",
        "2": "",
        "3": "",
        "4": "MO9999",
        "5": "SS",
      },
    ],
    "PID.4": "",
    "PID.5": {
      "1": "SIMPSON",
      "2": "BART",
      "3": "M",
      "4": "",
      "5": "",
      "6": "",
      "7": "L",
    },
    "PID.6": "",
    "PID.7": "19990101",
    "PID.8": "M",
  },
}
`;

exports[`HL7v2 Message should include the custom segment ZTP 1`] = `
{
  "MSH": {
    "MSH.1": "|",
    "MSH.10": "82636",
    "MSH.11": "T",
    "MSH.12": "2.5.1",
    "MSH.13": "",
    "MSH.14": "",
    "MSH.15": "",
    "MSH.16": "",
    "MSH.17": "",
    "MSH.18": "",
    "MSH.19": "",
    "MSH.2": "^~\\&",
    "MSH.20": "",
    "MSH.21": "",
    "MSH.22": "",
    "MSH.23": "",
    "MSH.3": "",
    "MSH.4": "APPT_NEW",
    "MSH.5": "",
    "MSH.6": "",
    "MSH.7": "20210917093833",
    "MSH.8": "78797",
    "MSH.9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "NTE.1": "1",
    "NTE.2": "",
    "NTE.3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "NTE.4": "SCHNote",
    "NTE.5": "",
    "NTE.6": "",
  },
  "PATIENT": {
    "PID": {
      "PID.1": "1",
      "PID.10": "",
      "PID.11": {
        "1": "1001 rue de la paix",
        "2": "",
        "3": "Bizerte",
        "4": "BZ",
        "5": "60610",
        "6": "",
        "7": "P",
      },
      "PID.12": "",
      "PID.13": [
        {
          "1": "(515)555-5552",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "515",
          "7": "5555552",
        },
        {
          "1": "",
          "2": "NET",
          "3": "Internet",
          "4": "mczernek8@gmail.com",
        },
      ],
      "PID.14": "",
      "PID.15": "",
      "PID.16": "",
      "PID.17": "",
      "PID.18": "",
      "PID.19": "000-00-0000",
      "PID.2": "",
      "PID.20": "",
      "PID.21": "",
      "PID.22": "",
      "PID.23": "",
      "PID.24": "",
      "PID.25": "",
      "PID.26": "",
      "PID.27": "",
      "PID.28": "",
      "PID.29": "",
      "PID.3": [
        {
          "1": "E2180692",
          "2": "",
          "3": "",
          "4": "EPI",
          "5": "EPI",
        },
        {
          "1": "80034002",
          "2": "",
          "3": "",
          "4": "",
          "5": "FH",
        },
        {
          "1": "8130726",
          "2": "",
          "3": "",
          "4": "",
          "5": "CM",
        },
        {
          "1": "4880723",
          "2": "",
          "3": "",
          "4": "",
          "5": "FMCCP",
        },
        {
          "1": "381080700",
          "2": "",
          "3": "",
          "4": "",
          "5": "4",
        },
      ],
      "PID.30": "N",
      "PID.31": "",
      "PID.32": "",
      "PID.4": "",
      "PID.5": {
        "1": "Somai",
        "2": "Melek",
      },
      "PID.6": "",
      "PID.7": "19970401",
      "PID.8": "M",
      "PID.9": "",
    },
    "PV1": {
      "PV1.1": "",
      "PV1.10": "",
      "PV1.11": "",
      "PV1.12": "",
      "PV1.13": "",
      "PV1.14": "",
      "PV1.15": "",
      "PV1.16": "",
      "PV1.17": "",
      "PV1.18": "",
      "PV1.19": "120152985",
      "PV1.2": "",
      "PV1.20": "",
      "PV1.21": "",
      "PV1.22": "",
      "PV1.23": "",
      "PV1.24": "",
      "PV1.25": "",
      "PV1.26": "",
      "PV1.27": "",
      "PV1.28": "",
      "PV1.29": "",
      "PV1.3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "PV1.30": "",
      "PV1.31": "",
      "PV1.32": "",
      "PV1.33": "",
      "PV1.34": "",
      "PV1.35": "",
      "PV1.36": "",
      "PV1.37": "",
      "PV1.38": "",
      "PV1.39": "",
      "PV1.4": "",
      "PV1.40": "",
      "PV1.41": "",
      "PV1.42": "",
      "PV1.43": "",
      "PV1.44": "20210917",
      "PV1.45": "",
      "PV1.46": "",
      "PV1.47": "",
      "PV1.48": "",
      "PV1.49": "",
      "PV1.5": "",
      "PV1.50": "",
      "PV1.6": "",
      "PV1.7": "",
      "PV1.8": "",
      "PV1.9": "",
    },
    "ZTP": [
      {
        "ZTP.1": {
          "1": "102850401",
          "2": "Cadence Automated Calling System Preference",
        },
        "ZTP.2": [
          {
            "1": "Phone",
            "2": "Y",
          },
          {
            "1": "Text",
            "2": "Y",
          },
        ],
      },
      {
        "ZTP.1": {
          "1": "102852401",
          "2": "Appointment Information",
        },
        "ZTP.2": [
          {
            "1": "Email",
            "2": "Y",
          },
          {
            "1": "Push",
            "2": "Y",
          },
        ],
      },
    ],
  },
  "RESOURCES": {
    "GENERAL_RESOURCE": {
      "AIG": {
        "AIG.1": "1",
        "AIG.10": "MIN",
        "AIG.11": "40",
        "AIG.12": "MIN",
        "AIG.2": "",
        "AIG.3": {
          "1": "102204",
          "2": "FASTCARE, MEIJER SUSSEX",
          "3": "EPC",
        },
        "AIG.4": {
          "1": "2",
          "2": "RESOURCE",
        },
        "AIG.5": "",
        "AIG.6": "",
        "AIG.7": "",
        "AIG.8": "20210917094500",
        "AIG.9": "0",
      },
      "ZCH": {
        "ZCH.1": "",
        "ZCH.2": "",
      },
    },
    "RGS": {
      "RGS.1": "1",
      "RGS.2": "",
      "RGS.3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
    "SERVICE": {
      "AIS": {
        "AIS.1": "1",
        "AIS.10": "Sch",
        "AIS.11": "",
        "AIS.12": "",
        "AIS.2": "",
        "AIS.3": {
          "1": "5072",
          "2": "ONLINE SCHEDULED WALK-IN",
        },
        "AIS.4": "",
        "AIS.5": "",
        "AIS.6": "",
        "AIS.7": "",
        "AIS.8": "",
        "AIS.9": "",
      },
    },
  },
  "SCH": {
    "SCH.1": "",
    "SCH.10": "MIN",
    "SCH.11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "SCH.12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.13": "",
    "SCH.14": "",
    "SCH.15": "",
    "SCH.16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.17": "",
    "SCH.18": "",
    "SCH.19": "",
    "SCH.2": "120152985",
    "SCH.20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.21": "",
    "SCH.22": "",
    "SCH.23": "",
    "SCH.24": "",
    "SCH.25": "Sch",
    "SCH.26": "",
    "SCH.27": "",
    "SCH.3": "",
    "SCH.4": "",
    "SCH.5": "",
    "SCH.6": "Sch",
    "SCH.7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "SCH.8": "",
    "SCH.9": "40",
  },
}
`;

exports[`Segment Schema should have sub-groups 1`] = `
{
  "MSH": {
    "MSH.1": "|",
    "MSH.10": "82636",
    "MSH.11": "T",
    "MSH.12": "2.5.1",
    "MSH.13": "",
    "MSH.14": "",
    "MSH.15": "",
    "MSH.16": "",
    "MSH.17": "",
    "MSH.18": "",
    "MSH.19": "",
    "MSH.2": "^~\\&",
    "MSH.20": "",
    "MSH.21": "",
    "MSH.22": "",
    "MSH.23": "",
    "MSH.3": "",
    "MSH.4": "APPT_NEW",
    "MSH.5": "",
    "MSH.6": "",
    "MSH.7": "20210917093833",
    "MSH.8": "78797",
    "MSH.9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "NTE.1": "1",
    "NTE.2": "",
    "NTE.3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "NTE.4": "SCHNote",
    "NTE.5": "",
    "NTE.6": "",
  },
  "PATIENT": {
    "PID": {
      "PID.1": "1",
      "PID.10": "",
      "PID.11": {
        "1": "1001 rue de la paix",
        "2": "",
        "3": "Bizerte",
        "4": "BZ",
        "5": "60610",
        "6": "",
        "7": "P",
      },
      "PID.12": "",
      "PID.13": [
        {
          "1": "(515)555-5552",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "515",
          "7": "5555552",
        },
        {
          "1": "",
          "2": "NET",
          "3": "Internet",
          "4": "mczernek8@gmail.com",
        },
      ],
      "PID.14": "",
      "PID.15": "",
      "PID.16": "",
      "PID.17": "",
      "PID.18": "",
      "PID.19": "000-00-0000",
      "PID.2": "",
      "PID.20": "",
      "PID.21": "",
      "PID.22": "",
      "PID.23": "",
      "PID.24": "",
      "PID.25": "",
      "PID.26": "",
      "PID.27": "",
      "PID.28": "",
      "PID.29": "",
      "PID.3": [
        {
          "1": "E2180692",
          "2": "",
          "3": "",
          "4": "EPI",
          "5": "EPI",
        },
        {
          "1": "80034002",
          "2": "",
          "3": "",
          "4": "",
          "5": "FH",
        },
        {
          "1": "8130726",
          "2": "",
          "3": "",
          "4": "",
          "5": "CM",
        },
        {
          "1": "4880723",
          "2": "",
          "3": "",
          "4": "",
          "5": "FMCCP",
        },
        {
          "1": "381080700",
          "2": "",
          "3": "",
          "4": "",
          "5": "4",
        },
      ],
      "PID.30": "N",
      "PID.31": "",
      "PID.32": "",
      "PID.4": "",
      "PID.5": {
        "1": "Somai",
        "2": "Melek",
      },
      "PID.6": "",
      "PID.7": "19970401",
      "PID.8": "M",
      "PID.9": "",
    },
    "PV1": {
      "PV1.1": "",
      "PV1.10": "",
      "PV1.11": "",
      "PV1.12": "",
      "PV1.13": "",
      "PV1.14": "",
      "PV1.15": "",
      "PV1.16": "",
      "PV1.17": "",
      "PV1.18": "",
      "PV1.19": "120152985",
      "PV1.2": "",
      "PV1.20": "",
      "PV1.21": "",
      "PV1.22": "",
      "PV1.23": "",
      "PV1.24": "",
      "PV1.25": "",
      "PV1.26": "",
      "PV1.27": "",
      "PV1.28": "",
      "PV1.29": "",
      "PV1.3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "PV1.30": "",
      "PV1.31": "",
      "PV1.32": "",
      "PV1.33": "",
      "PV1.34": "",
      "PV1.35": "",
      "PV1.36": "",
      "PV1.37": "",
      "PV1.38": "",
      "PV1.39": "",
      "PV1.4": "",
      "PV1.40": "",
      "PV1.41": "",
      "PV1.42": "",
      "PV1.43": "",
      "PV1.44": "20210917",
      "PV1.45": "",
      "PV1.46": "",
      "PV1.47": "",
      "PV1.48": "",
      "PV1.49": "",
      "PV1.5": "",
      "PV1.50": "",
      "PV1.6": "",
      "PV1.7": "",
      "PV1.8": "",
      "PV1.9": "",
    },
  },
  "RESOURCES": {
    "GENERAL_RESOURCE": {
      "AIG": {
        "AIG.1": "1",
        "AIG.10": "MIN",
        "AIG.11": "40",
        "AIG.12": "MIN",
        "AIG.2": "",
        "AIG.3": {
          "1": "102204",
          "2": "FASTCARE, MEIJER SUSSEX",
          "3": "EPC",
        },
        "AIG.4": {
          "1": "2",
          "2": "RESOURCE",
        },
        "AIG.5": "",
        "AIG.6": "",
        "AIG.7": "",
        "AIG.8": "20210917094500",
        "AIG.9": "0",
      },
    },
    "RGS": {
      "RGS.1": "1",
      "RGS.2": "",
      "RGS.3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
    "SERVICE": {
      "AIS": {
        "AIS.1": "1",
        "AIS.10": "Sch",
        "AIS.11": "",
        "AIS.12": "",
        "AIS.2": "",
        "AIS.3": {
          "1": "5072",
          "2": "ONLINE SCHEDULED WALK-IN",
        },
        "AIS.4": "",
        "AIS.5": "",
        "AIS.6": "",
        "AIS.7": "",
        "AIS.8": "",
        "AIS.9": "",
      },
    },
  },
  "SCH": {
    "SCH.1": "",
    "SCH.10": "MIN",
    "SCH.11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "SCH.12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.13": "",
    "SCH.14": "",
    "SCH.15": "",
    "SCH.16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.17": "",
    "SCH.18": "",
    "SCH.19": "",
    "SCH.2": "120152985",
    "SCH.20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.21": "",
    "SCH.22": "",
    "SCH.23": "",
    "SCH.24": "",
    "SCH.25": "Sch",
    "SCH.26": "",
    "SCH.27": "",
    "SCH.3": "",
    "SCH.4": "",
    "SCH.5": "",
    "SCH.6": "Sch",
    "SCH.7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "SCH.8": "",
    "SCH.9": "40",
  },
}
`;

exports[`Segment Schema should match the json schema 1`] = `
{
  "MSH": {
    "MSH.1": "|",
    "MSH.10": "82636",
    "MSH.11": "T",
    "MSH.12": "2.5.1",
    "MSH.13": "",
    "MSH.14": "",
    "MSH.15": "",
    "MSH.16": "",
    "MSH.17": "",
    "MSH.18": "",
    "MSH.19": "",
    "MSH.2": "^~\\&",
    "MSH.20": "",
    "MSH.21": "",
    "MSH.22": "",
    "MSH.23": "",
    "MSH.3": "",
    "MSH.4": "APPT_NEW",
    "MSH.5": "",
    "MSH.6": "",
    "MSH.7": "20210917093833",
    "MSH.8": "78797",
    "MSH.9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "NTE.1": "1",
    "NTE.2": "",
    "NTE.3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "NTE.4": "SCHNote",
    "NTE.5": "",
    "NTE.6": "",
  },
  "PATIENT": {
    "PID": {
      "PID.1": "1",
      "PID.10": "",
      "PID.11": {
        "1": "1001 rue de la paix",
        "2": "",
        "3": "Bizerte",
        "4": "BZ",
        "5": "60610",
        "6": "",
        "7": "P",
      },
      "PID.12": "",
      "PID.13": [
        {
          "1": "(515)555-5552",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "515",
          "7": "5555552",
        },
        {
          "1": "",
          "2": "NET",
          "3": "Internet",
          "4": "mczernek8@gmail.com",
        },
      ],
      "PID.14": "",
      "PID.15": "",
      "PID.16": "",
      "PID.17": "",
      "PID.18": "",
      "PID.19": "000-00-0000",
      "PID.2": "",
      "PID.20": "",
      "PID.21": "",
      "PID.22": "",
      "PID.23": "",
      "PID.24": "",
      "PID.25": "",
      "PID.26": "",
      "PID.27": "",
      "PID.28": "",
      "PID.29": "",
      "PID.3": [
        {
          "1": "E2180692",
          "2": "",
          "3": "",
          "4": "EPI",
          "5": "EPI",
        },
        {
          "1": "80034002",
          "2": "",
          "3": "",
          "4": "",
          "5": "FH",
        },
        {
          "1": "8130726",
          "2": "",
          "3": "",
          "4": "",
          "5": "CM",
        },
        {
          "1": "4880723",
          "2": "",
          "3": "",
          "4": "",
          "5": "FMCCP",
        },
        {
          "1": "381080700",
          "2": "",
          "3": "",
          "4": "",
          "5": "4",
        },
      ],
      "PID.30": "N",
      "PID.31": "",
      "PID.32": "",
      "PID.4": "",
      "PID.5": {
        "1": "Somai",
        "2": "Melek",
      },
      "PID.6": "",
      "PID.7": "19970401",
      "PID.8": "M",
      "PID.9": "",
    },
    "PV1": {
      "PV1.1": "",
      "PV1.10": "",
      "PV1.11": "",
      "PV1.12": "",
      "PV1.13": "",
      "PV1.14": "",
      "PV1.15": "",
      "PV1.16": "",
      "PV1.17": "",
      "PV1.18": "",
      "PV1.19": "120152985",
      "PV1.2": "",
      "PV1.20": "",
      "PV1.21": "",
      "PV1.22": "",
      "PV1.23": "",
      "PV1.24": "",
      "PV1.25": "",
      "PV1.26": "",
      "PV1.27": "",
      "PV1.28": "",
      "PV1.29": "",
      "PV1.3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "PV1.30": "",
      "PV1.31": "",
      "PV1.32": "",
      "PV1.33": "",
      "PV1.34": "",
      "PV1.35": "",
      "PV1.36": "",
      "PV1.37": "",
      "PV1.38": "",
      "PV1.39": "",
      "PV1.4": "",
      "PV1.40": "",
      "PV1.41": "",
      "PV1.42": "",
      "PV1.43": "",
      "PV1.44": "20210917",
      "PV1.45": "",
      "PV1.46": "",
      "PV1.47": "",
      "PV1.48": "",
      "PV1.49": "",
      "PV1.5": "",
      "PV1.50": "",
      "PV1.6": "",
      "PV1.7": "",
      "PV1.8": "",
      "PV1.9": "",
    },
  },
  "RESOURCES": {
    "GENERAL_RESOURCE": {
      "AIG": {
        "AIG.1": "1",
        "AIG.10": "MIN",
        "AIG.11": "40",
        "AIG.12": "MIN",
        "AIG.2": "",
        "AIG.3": {
          "1": "102204",
          "2": "FASTCARE, MEIJER SUSSEX",
          "3": "EPC",
        },
        "AIG.4": {
          "1": "2",
          "2": "RESOURCE",
        },
        "AIG.5": "",
        "AIG.6": "",
        "AIG.7": "",
        "AIG.8": "20210917094500",
        "AIG.9": "0",
      },
    },
    "RGS": {
      "RGS.1": "1",
      "RGS.2": "",
      "RGS.3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
    "SERVICE": {
      "AIS": {
        "AIS.1": "1",
        "AIS.10": "Sch",
        "AIS.11": "",
        "AIS.12": "",
        "AIS.2": "",
        "AIS.3": {
          "1": "5072",
          "2": "ONLINE SCHEDULED WALK-IN",
        },
        "AIS.4": "",
        "AIS.5": "",
        "AIS.6": "",
        "AIS.7": "",
        "AIS.8": "",
        "AIS.9": "",
      },
    },
  },
  "SCH": {
    "SCH.1": "",
    "SCH.10": "MIN",
    "SCH.11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "SCH.12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.13": "",
    "SCH.14": "",
    "SCH.15": "",
    "SCH.16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.17": "",
    "SCH.18": "",
    "SCH.19": "",
    "SCH.2": "120152985",
    "SCH.20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.21": "",
    "SCH.22": "",
    "SCH.23": "",
    "SCH.24": "",
    "SCH.25": "Sch",
    "SCH.26": "",
    "SCH.27": "",
    "SCH.3": "",
    "SCH.4": "",
    "SCH.5": "",
    "SCH.6": "Sch",
    "SCH.7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "SCH.8": "",
    "SCH.9": "40",
  },
}
`;

exports[`Segment Schema should retrieve the schema 1`] = `
HL7v2Schema {
  "schema": {
    "$defs": {
      "GENERAL_RESOURCE": {
        "$id": "/schemas/GENERAL_RESOURCE",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "AIG": {
            "$ref": "segments.schema.json#/definitions/AIG",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "NTE": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/NTE",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/NTE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
        },
        "required": [
          "AIG",
        ],
        "type": "object",
      },
      "LOCATION_RESOURCE": {
        "$id": "/schemas/LOCATION_RESOURCE",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "AIL": {
            "$ref": "segments.schema.json#/definitions/AIL",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "NTE": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/NTE",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/NTE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
        },
        "required": [
          "AIL",
        ],
        "type": "object",
      },
      "PATIENT": {
        "$id": "/schemas/PATIENT",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "DG1": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/DG1",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/DG1",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
          "OBX": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/OBX",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/OBX",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
          "PD1": {
            "$ref": "segments.schema.json#/definitions/PD1",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Unique",
            },
          },
          "PID": {
            "$ref": "segments.schema.json#/definitions/PID",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "PV1": {
            "$ref": "segments.schema.json#/definitions/PV1",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Unique",
            },
          },
          "PV2": {
            "$ref": "segments.schema.json#/definitions/PV2",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Unique",
            },
          },
        },
        "required": [
          "PID",
        ],
        "type": "object",
      },
      "PERSONNEL_RESOURCE": {
        "$id": "/schemas/PERSONNEL_RESOURCE",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "AIP": {
            "$ref": "segments.schema.json#/definitions/AIP",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "NTE": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/NTE",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/NTE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
        },
        "required": [
          "AIP",
        ],
        "type": "object",
      },
      "RESOURCES": {
        "$id": "/schemas/RESOURCES",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "GENERAL_RESOURCE": {
            "anyOf": [
              {
                "$ref": "/schemas/GENERAL_RESOURCE",
              },
              {
                "items": {
                  "$ref": "/schemas/GENERAL_RESOURCE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
          "LOCATION_RESOURCE": {
            "anyOf": [
              {
                "$ref": "/schemas/LOCATION_RESOURCE",
              },
              {
                "items": {
                  "$ref": "/schemas/LOCATION_RESOURCE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
          "PERSONNEL_RESOURCE": {
            "anyOf": [
              {
                "$ref": "/schemas/PERSONNEL_RESOURCE",
              },
              {
                "items": {
                  "$ref": "/schemas/PERSONNEL_RESOURCE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
          "RGS": {
            "$ref": "segments.schema.json#/definitions/RGS",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "SERVICE": {
            "anyOf": [
              {
                "$ref": "/schemas/SERVICE",
              },
              {
                "items": {
                  "$ref": "/schemas/SERVICE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
        },
        "required": [
          "RGS",
        ],
        "type": "object",
      },
      "SERVICE": {
        "$id": "/schemas/SERVICE",
        "$schema": "http://json-schema.org/draft-07/schema#",
        "properties": {
          "AIS": {
            "$ref": "segments.schema.json#/definitions/AIS",
            "metadata": {
              "maxOccurs": "1",
              "minOccurs": "1",
              "optionality": "Required",
              "repeatability": "Unique",
            },
          },
          "NTE": {
            "anyOf": [
              {
                "$ref": "segments.schema.json#/definitions/NTE",
              },
              {
                "items": {
                  "$ref": "segments.schema.json#/definitions/NTE",
                },
                "type": "array",
              },
            ],
            "metadata": {
              "maxOccurs": "unbounded",
              "minOccurs": "0",
              "optionality": "Optional",
              "repeatability": "Multiple",
            },
          },
        },
        "required": [
          "AIS",
        ],
        "type": "object",
      },
    },
    "$id": "https://www.rethinkhealth.io/schemas/SIU_S12.schema.json",
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "description": "JSON Schema definition for HL7v2",
    "properties": {
      "MSH": {
        "$ref": "segments.schema.json#/definitions/MSH",
        "metadata": {
          "maxOccurs": "1",
          "minOccurs": "1",
          "optionality": "Required",
          "repeatability": "Unique",
        },
      },
      "NTE": {
        "anyOf": [
          {
            "$ref": "segments.schema.json#/definitions/NTE",
          },
          {
            "items": {
              "$ref": "segments.schema.json#/definitions/NTE",
            },
            "type": "array",
          },
        ],
        "metadata": {
          "maxOccurs": "unbounded",
          "minOccurs": "0",
          "optionality": "Optional",
          "repeatability": "Multiple",
        },
      },
      "PATIENT": {
        "anyOf": [
          {
            "$ref": "/schemas/PATIENT",
          },
          {
            "items": {
              "$ref": "/schemas/PATIENT",
            },
            "type": "array",
          },
        ],
        "metadata": {
          "maxOccurs": "unbounded",
          "minOccurs": "0",
          "optionality": "Optional",
          "repeatability": "Multiple",
        },
      },
      "RESOURCES": {
        "anyOf": [
          {
            "$ref": "/schemas/RESOURCES",
          },
          {
            "items": {
              "$ref": "/schemas/RESOURCES",
            },
            "type": "array",
          },
        ],
        "metadata": {
          "maxOccurs": "unbounded",
          "minOccurs": "1",
          "optionality": "Required",
          "repeatability": "Multiple",
        },
      },
      "SCH": {
        "$ref": "segments.schema.json#/definitions/SCH",
        "metadata": {
          "maxOccurs": "1",
          "minOccurs": "1",
          "optionality": "Required",
          "repeatability": "Unique",
        },
      },
      "TQ1": {
        "anyOf": [
          {
            "$ref": "segments.schema.json#/definitions/TQ1",
          },
          {
            "items": {
              "$ref": "segments.schema.json#/definitions/TQ1",
            },
            "type": "array",
          },
        ],
        "metadata": {
          "maxOccurs": "unbounded",
          "minOccurs": "0",
          "optionality": "Optional",
          "repeatability": "Multiple",
        },
      },
    },
    "required": [
      "MSH",
      "SCH",
      "RESOURCES",
    ],
    "title": "HL7v2 SIU_S12",
    "type": "object",
  },
}
`;

exports[`Segment with multiple identical segments should group them together 1`] = `
{
  "MSH": {
    "MSH.1": "|",
    "MSH.10": "82636",
    "MSH.11": "T",
    "MSH.12": "2.5.1",
    "MSH.13": "",
    "MSH.14": "",
    "MSH.15": "",
    "MSH.16": "",
    "MSH.17": "",
    "MSH.18": "",
    "MSH.19": "",
    "MSH.2": "^~\\&",
    "MSH.20": "",
    "MSH.21": "",
    "MSH.22": "",
    "MSH.23": "",
    "MSH.3": "",
    "MSH.4": "APPT_NEW",
    "MSH.5": "",
    "MSH.6": "",
    "MSH.7": "20210917093833",
    "MSH.8": "78797",
    "MSH.9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "NTE.1": "1",
    "NTE.2": "",
    "NTE.3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "NTE.4": "SCHNote",
    "NTE.5": "",
    "NTE.6": "",
  },
  "PATIENT": [
    {
      "PID": {
        "PID.1": "1",
        "PID.10": "",
        "PID.11": {
          "1": "2000 new avenues",
          "2": "",
          "3": "Chicago",
          "4": "IL",
          "5": "60610",
          "6": "",
          "7": "P",
        },
        "PID.12": "",
        "PID.13": {
          "1": "(414)444-5555",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "414",
          "7": "55544444",
        },
        "PID.14": "",
        "PID.15": "",
        "PID.16": "",
        "PID.17": "",
        "PID.18": "",
        "PID.19": "000-00-0000",
        "PID.2": "",
        "PID.20": "",
        "PID.21": "",
        "PID.22": "",
        "PID.23": "",
        "PID.24": "",
        "PID.25": "",
        "PID.26": "",
        "PID.27": "",
        "PID.28": "",
        "PID.29": "",
        "PID.3": [
          {
            "1": "Z002347",
            "2": "",
            "3": "",
            "4": "EHR",
            "5": "EHI",
          },
          {
            "1": "8000012345",
            "2": "",
            "3": "",
            "4": "",
            "5": "RH",
          },
        ],
        "PID.30": "N",
        "PID.31": "",
        "PID.32": "",
        "PID.4": "",
        "PID.5": {
          "1": "Bond",
          "2": "James",
        },
        "PID.6": "",
        "PID.7": "20000101",
        "PID.8": "M",
        "PID.9": "",
      },
    },
    {
      "PID": {
        "PID.1": "2",
        "PID.10": "",
        "PID.11": {
          "1": "1001 rue de la paix",
          "2": "",
          "3": "Bizerte",
          "4": "BZ",
          "5": "60610",
          "6": "",
          "7": "P",
        },
        "PID.12": "",
        "PID.13": [
          {
            "1": "(515)555-5552",
            "2": "P",
            "3": "7",
            "4": "",
            "5": "",
            "6": "515",
            "7": "5555552",
          },
          {
            "1": "",
            "2": "NET",
            "3": "Internet",
            "4": "mczernek8@gmail.com",
          },
        ],
        "PID.14": "",
        "PID.15": "",
        "PID.16": "",
        "PID.17": "",
        "PID.18": "",
        "PID.19": "000-00-0000",
        "PID.2": "",
        "PID.20": "",
        "PID.21": "",
        "PID.22": "",
        "PID.23": "",
        "PID.24": "",
        "PID.25": "",
        "PID.26": "",
        "PID.27": "",
        "PID.28": "",
        "PID.29": "",
        "PID.3": [
          {
            "1": "E2180692",
            "2": "",
            "3": "",
            "4": "EPI",
            "5": "EPI",
          },
          {
            "1": "80034002",
            "2": "",
            "3": "",
            "4": "",
            "5": "FH",
          },
          {
            "1": "8130726",
            "2": "",
            "3": "",
            "4": "",
            "5": "CM",
          },
          {
            "1": "4880723",
            "2": "",
            "3": "",
            "4": "",
            "5": "FMCCP",
          },
          {
            "1": "381080700",
            "2": "",
            "3": "",
            "4": "",
            "5": "4",
          },
        ],
        "PID.30": "N",
        "PID.31": "",
        "PID.32": "",
        "PID.4": "",
        "PID.5": {
          "1": "Somai",
          "2": "Melek",
        },
        "PID.6": "",
        "PID.7": "19970401",
        "PID.8": "M",
        "PID.9": "",
      },
      "PV1": {
        "PV1.1": "",
        "PV1.10": "",
        "PV1.11": "",
        "PV1.12": "",
        "PV1.13": "",
        "PV1.14": "",
        "PV1.15": "",
        "PV1.16": "",
        "PV1.17": "",
        "PV1.18": "",
        "PV1.19": "120152985",
        "PV1.2": "",
        "PV1.20": "",
        "PV1.21": "",
        "PV1.22": "",
        "PV1.23": "",
        "PV1.24": "",
        "PV1.25": "",
        "PV1.26": "",
        "PV1.27": "",
        "PV1.28": "",
        "PV1.29": "",
        "PV1.3": {
          "1": "FCMEIJERSUS",
          "10": "",
          "11": "",
          "2": "",
          "3": "",
          "4": "FMCCP",
          "5": "",
          "6": "",
          "7": "",
          "8": "",
          "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
        },
        "PV1.30": "",
        "PV1.31": "",
        "PV1.32": "",
        "PV1.33": "",
        "PV1.34": "",
        "PV1.35": "",
        "PV1.36": "",
        "PV1.37": "",
        "PV1.38": "",
        "PV1.39": "",
        "PV1.4": "",
        "PV1.40": "",
        "PV1.41": "",
        "PV1.42": "",
        "PV1.43": "",
        "PV1.44": "20210917",
        "PV1.45": "",
        "PV1.46": "",
        "PV1.47": "",
        "PV1.48": "",
        "PV1.49": "",
        "PV1.5": "",
        "PV1.50": "",
        "PV1.6": "",
        "PV1.7": "",
        "PV1.8": "",
        "PV1.9": "",
      },
    },
  ],
  "RESOURCES": {
    "GENERAL_RESOURCE": {
      "AIG": {
        "AIG.1": "1",
        "AIG.10": "MIN",
        "AIG.11": "40",
        "AIG.12": "MIN",
        "AIG.2": "",
        "AIG.3": {
          "1": "102204",
          "2": "FASTCARE, MEIJER SUSSEX",
          "3": "EPC",
        },
        "AIG.4": {
          "1": "2",
          "2": "RESOURCE",
        },
        "AIG.5": "",
        "AIG.6": "",
        "AIG.7": "",
        "AIG.8": "20210917094500",
        "AIG.9": "0",
      },
    },
    "RGS": {
      "RGS.1": "1",
      "RGS.2": "",
      "RGS.3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
    "SERVICE": {
      "AIS": {
        "AIS.1": "1",
        "AIS.10": "Sch",
        "AIS.11": "",
        "AIS.12": "",
        "AIS.2": "",
        "AIS.3": {
          "1": "5072",
          "2": "ONLINE SCHEDULED WALK-IN",
        },
        "AIS.4": "",
        "AIS.5": "",
        "AIS.6": "",
        "AIS.7": "",
        "AIS.8": "",
        "AIS.9": "",
      },
    },
  },
  "SCH": {
    "SCH.1": "",
    "SCH.10": "MIN",
    "SCH.11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "SCH.12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.13": "",
    "SCH.14": "",
    "SCH.15": "",
    "SCH.16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.17": "",
    "SCH.18": "",
    "SCH.19": "",
    "SCH.2": "120152985",
    "SCH.20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "SCH.21": "",
    "SCH.22": "",
    "SCH.23": "",
    "SCH.24": "",
    "SCH.25": "Sch",
    "SCH.26": "",
    "SCH.27": "",
    "SCH.3": "",
    "SCH.4": "",
    "SCH.5": "",
    "SCH.6": "Sch",
    "SCH.7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "SCH.8": "",
    "SCH.9": "40",
  },
}
`;
